Fixed z-index again

--- a/client/css/roomstyle.css
+++ b/client/css/roomstyle.css
@@ -23,7 +23,7 @@
 	bottom: 0;
 	background-color: white;
 	border-left: 1px solid #A5A5A5;
-	z-index: 1;
+	z-index: 2;
 }
 
 #messages {
@@ -74,5 +74,5 @@ video {
 	right: 0;
 	width: 250px;
 	-webkit-transform: rotateY(180deg);
-	z-index: -1;
+	z-index: 1;
 }
